Fixed main activity_main.xml i) linked a button to the method "GotoSignUp" in MainActivity.java -Filled the MainGame.java with code from the previous project -Designed the activity_main_game.xml -Designed the Tutorial1 xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TFOTMAuthTest">
         <activity
+            android:name=".Tutorial1"
+            android:exported="false" />
+        <activity
             android:name=".MainGame"
             android:exported="false" />
         <activity
