Fixed main activity_main.xml i) linked a button to the method "GotoSignUp" in MainActivity.java -Filled the MainGame.java with code from the previous project -Designed the activity_main_game.xml
- added Slash class and code in GameView"
- added some notes next to the codes in GameView
-fixed some xml designs [18/2/22]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TFOTMAuthTest">
         <activity
-            android:name=".Tutorial1"
+            android:name=".Signup"
             android:exported="false" />
         <activity
+            android:name=".Tutorial1"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        <activity
             android:name=".MainGame"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".Test"
             android:exported="false" />
         <activity
             android:name=".GameActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".Selection"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
