--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TFOTMAuthTest">
         <activity
+            android:name=".Tutorial2"
+            android:exported="false" />
+        <activity
             android:name=".Signup"
             android:exported="false" />
         <activity
             android:name=".Tutorial1"
-            android:exported="false"
-            android:screenOrientation="landscape" />
-        <activity
-            android:name=".MainGame"
             android:exported="false"
             android:screenOrientation="landscape" />
         <activity
