Fixed main activity_main.xml i) linked a button to the method "GotoSignUp" in MainActivity.java -Filled the MainGame.java with code from the previous project -Designed the activity_main_game.xml
- added Slash class and code in GameView"
- added some notes next to the codes in GameView
-fixed some xml designs [18/2/22]
-More xml designs and gameview fixes
-Removed MainGame Activity [25/2/22]
-Added more Design to tutorial pages (tutorial1,2,3)[25/2/22]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TFOTMAuthTest">
         <activity
+            android:name=".Tutorial4"
+            android:exported="false" />
+        <activity
+            android:name=".Tutorial3"
+            android:exported="false" />
+        <activity
             android:name=".Tutorial2"
             android:exported="false" />
         <activity
