--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
-        <!--android:theme="@style/Theme.TFOTMAuthTest"-->
+        <activity
+            android:name=".Aboora"
+            android:exported="false" />
+        <!-- android:theme="@style/Theme.TFOTMAuthTest" -->
         <activity
             android:name=".Tutorial4"
             android:exported="false" />
@@ -30,19 +33,19 @@
             android:exported="false" />
         <activity
             android:name=".GameActivity"
-            android:theme="@style/Theme.AppCompat.Light"
             android:exported="false"
-            android:screenOrientation="landscape" />
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".Selection"
-            android:theme="@style/Theme.AppCompat.Light"
             android:exported="false"
-            android:screenOrientation="landscape" />
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.Light"
             android:exported="true"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.AppCompat.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
