--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
+
         <activity
             android:name=".TopScoresActivity"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.Light"
             android:screenOrientation="landscape"
-            />
+            android:theme="@style/Theme.AppCompat.Light" />
+        <activity
+            android:name=".StarttActivity"
+            android:exported="false"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".Aboora"
             android:exported="false"
@@ -22,18 +27,18 @@
         <activity
             android:name=".Tutorial4"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.Light"
-            android:screenOrientation="landscape" />
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".Tutorial3"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.Light"
-            android:screenOrientation="landscape" />
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".Tutorial2"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.Light"
-            android:screenOrientation="landscape" />
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".Signup"
             android:exported="false"
@@ -43,8 +48,7 @@
             android:name=".Tutorial1"
             android:exported="false"
             android:screenOrientation="landscape"
-            android:theme="@style/Theme.AppCompat.Light"
-            />
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".Test"
             android:exported="false" />
